--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,3 +1,7 @@
-<p>
-  content works!
-</p>
+<div class="wrapper">
+  <app-partial-navbar #navbar></app-partial-navbar>
+  <div id="content">
+      <app-partial-navheader #navheader (enviar) = "getMensaje($event)"></app-partial-navheader>
+      <router-outlet></router-outlet>
+  </div>
+</div>
